[gd_scene load_steps=11 format=2]

[ext_resource path="res://Levels/Lava_Geyser.gd" type="Script" id=1]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.996078, 0.152941, 0, 1, 0.8, 0.52549, 0.027451, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 1 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.806452, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 20.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 30.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 2 )
color_initial_ramp = SubResource( 4 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 2
emission_box_extents = Vector3( 4, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 10.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 7 )
color_initial_ramp = SubResource( 6 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 6, 22.5 )

[node name="LavaGeyser" type="Node2D"]
script = ExtResource( 1 )

[node name="WarningParticles" type="Particles2D" parent="."]
emitting = false
lifetime = 0.7
process_material = SubResource( 3 )

[node name="ExplosionParticles" type="Particles2D" parent="."]
emitting = false
amount = 200
process_material = SubResource( 8 )

[node name="ExplosionArea" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
position = Vector2( 0, -22.5 )
shape = SubResource( 9 )

[node name="WarningTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="timeout" from="WarningTimer" to="." method="_on_WarningTimer_timeout"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
